aws/ecs/CloudFormationStacks/NetworkStack.yaml
Description: This stack creates new network resurces - vpc, 2 public 2 private subnets, route tables, internet and NAT gateways, 2 elastic IPs


# Tiek grupēta ievadparametru sekcija
Metadata:
  AWS::CloudFormation::Interface:
    ParameterGroups:
      - Label:
          default: Networking configurations
        Parameters:          
          - VpcCIDR
          - PublicSubnet1CIDR
          - PublicSubnet2CIDR
          - PrivateSubnet1CIDR
          - PrivateSubnet2CIDR   

         
# Definēti ievadparamteri, to tips, apraksts, simbolu daudzuma un struktūras ierobežojumi
#   1. VpcCIDR - CIDR adrešu diapozons VPC
#   2. PublicSubnet1CIDR, PublicSubnet2CIDR - CIDR adrešu diapozons VPC publiskajiem apakštīkliem
#   3. PrivateSubnet1CIDR, PrivateSubnet2CIDR - CIDR adrešu diapozons VPC privātjaiem apakštīkliem
Parameters:
  VpcCIDR:
    Type: String
    Description: CIDR block should be used to create the VPC (e.g. 10.0.0.0/16)
    MaxLength: 18
    MinLength: 9
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x (e.g. 10.0.0.0/16)

  PublicSubnet1CIDR:
    Type: String
    Description: CIDR block should be used to create the public subnet in AZ1 (e.g. 10.0.0.0/24)
    MaxLength: 18
    MinLength: 9
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x (e.g. 10.0.0.0/24)

  PublicSubnet2CIDR:
    Type: String
    Description: CIDR block should be used to create the public subnet in AZ2 (e.g. 10.0.1.0/24)
    MaxLength: 18
    MinLength: 9    
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x (e.g. 10.0.1.0/24)

  PrivateSubnet1CIDR:
    Type: String
    Description: CIDR block should be used to create the public subnet in AZ1 (e.g. 10.0.2.0/24)
    MaxLength: 18
    MinLength: 9    
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x (e.g. 10.0.2.0/24)
  
  PrivateSubnet2CIDR:
    Type: String
    Description: CIDR block should be used to create the public subnet in AZ2 (e.g. 10.0.3.0/24)
    MaxLength: 18
    MinLength: 9    
    AllowedPattern: "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{2})"
    ConstraintDescription: Must be a valid IP CIDR range of the form x.x.x.x/x (e.g. 10.0.3.0/24) 


# Definēti visi resursi un to īpašības, kas tiks izveidoti, izpildot šo veidni:
#   1. Vpc - kārtējums uz CIDR diapozona vērtību, iespējots DNS resursdatoru nosaukuma atbalsts#      
#   2. PublicSubnet1, PublicSubnet2 - VPC publiskie apakštīkli, definēts VPC izvietojums jeb kartējums uz VPC nosaukuma vērtību, CIDR diapozons, pieejamības zonas izvietojums, 
#      iespējota IP adrešu piešķiršana instancēm, kas atrodas šajos apakštīklos
#   3. PrivateSubnet1, PrivateSubnet2 - VPC privātie apakštīkli, definēts VPC izvietojums jeb kartējums uz VPC nosaukuma vērtību, CIDR diapozons, pieejamības zonas izvietojums 
#   4. InternetGateway, VpcGatewayToInternet - interneta vārteja un tās piesaistne ar VPC
#   5. NatEIp1, NatEIp2 - elastīgās IP adreses, definēts VPC domeins šo adrešu izmantošanai un piešķiršanai iekš VPC
#   6. Nat1, Nat2 - NAT vārtejejas, definēts kartējums uz elastīgo IP adrešu vērtībām un izvietojums publiskajos apakštīklos, atkarība no Interneta vārtejas resursa
#   7. PublicRouteTable, PrivateRouteTable1, PrivateRouteTable2 - deklarēta datuplūsmas maršutēšanas tabulu izveidi un kartējums uz VPC ID vērtību, kurā izvietot šos resursus
#   8. PublicRoute, PrivateRoute1, PrivateRoute2 - datuplūsmas maršuti un asociācijas ar vārtejām un maršutēšanas tabulām
#   9. PublicSubnet1RtAssoc, PublicSubnet2RtAssoc, PrivateSubnet1RtAssoc, PrivateSubnet2RtAssoc - definēta apakštīklu saistība ar maršutēšana tabulām un apakštīkliem
#   10. RdsSubnetGroup - Datubāzes apakštīklu grupas saistība ar privātajiem apakštīkliem 
Resources:    
  Vpc:    
    Type: AWS::EC2::VPC
    Properties:      
      CidrBlock: !Ref VpcCIDR
      EnableDnsSupport: true
      EnableDnsHostnames: true             
    
  PublicSubnet1:    
    Type: AWS::EC2::Subnet
    Properties:       
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnet1CIDR      
      AvailabilityZone: !Sub ${AWS::Region}a 
      MapPublicIpOnLaunch: true      
  
  PublicSubnet2:    
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PublicSubnet2CIDR    
      AvailabilityZone: !Sub ${AWS::Region}b
      MapPublicIpOnLaunch: true      
 
  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnet1CIDR
      AvailabilityZone: !Sub ${AWS::Region}a
      MapPublicIpOnLaunch: false      

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref Vpc
      CidrBlock: !Ref PrivateSubnet2CIDR
      AvailabilityZone: !Sub ${AWS::Region}b     
      MapPublicIpOnLaunch: false      

  InternetGateway:
    Type: AWS::EC2::InternetGateway    
  
  VpcGatewayToInternet:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:      
      VpcId: !Ref Vpc
      InternetGatewayId: !Ref InternetGateway
  
  NatEIp1:
    Type: AWS::EC2::EIP    
    Properties:      
      Domain: vpc    
        
  NatEIp2:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc    
  
  Nat1:
    Type: AWS::EC2::NatGateway
    Properties:      
      AllocationId: !GetAtt NatEIp1.AllocationId
      SubnetId: !Ref PublicSubnet1    
  
  Nat2:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId: !GetAtt NatEIp2.AllocationId
      SubnetId: !Ref PublicSubnet2
  
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc    
  
  PrivateRouteTable1:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
  
  PrivateRouteTable2:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref Vpc
 
  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
      RouteTableId: !Ref PublicRouteTable  
  
  PrivateRoute1:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref Nat1
      RouteTableId: !Ref PrivateRouteTable1
 
  PrivateRoute2:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !Ref Nat2
      RouteTableId: !Ref PrivateRouteTable2

  PublicSubnet1RtAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  PublicSubnet2RtAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet2

  PrivateSubnet1RtAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable1
      SubnetId: !Ref PrivateSubnet1

  PrivateSubnet2RtAssoc:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PrivateRouteTable2
      SubnetId: !Ref PrivateSubnet2

  RdsSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: RDS DB Subnet group
      SubnetIds: [!Ref PrivateSubnet1, !Ref PrivateSubnet2]    


# Definēti izveidoto resursu izvaddati un eksporta vērtības
#   1. VpcId - apraksts, Vpc resursa ID vērtība un tās eksports
#   2. VpcCidrBlock - apraksts, Vpc resursa CIDR adrešu diapozona vērtība un tās eksports
#   3. PublicSubnet1, PublicSubnet2, PrivateSubnet1, PrivateSubnet2 - apraksts, apakštīklu ID vērtības un to eksports
#   4. RdsSubnetGroupId - apraksts, RDS apakštīklu grupas ID vērtība un tās eksports
Outputs:  
  VpcId:
    Description: Vpc resource ID
    Value: !Ref Vpc
    Export: 
      Name: !Sub ${AWS::StackName}:VpcId

  VpcCidrBlock:
    Description: The set of IP addresses for the VPC
    Value: !GetAtt Vpc.CidrBlock
    Export: 
      Name: !Sub ${AWS::StackName}:VpcCidrBlock

  PublicSubnet1Id:
    Description: Subnet ID of public subnet in AZ1
    Value: !Ref PublicSubnet1
    Export: 
      Name: !Sub ${AWS::StackName}:PublicSubnet1Id   
      
  PublicSubnet2Id:
    Description: Subnet ID of public subnet in AZ2
    Value: !Ref PublicSubnet2
    Export: 
      Name: !Sub ${AWS::StackName}:PublicSubnet2Id    

  PrivateSubnet1Id:
    Description: Subnet ID of private subnet in AZ1
    Value: !Ref PrivateSubnet1
    Export: 
      Name: !Sub ${AWS::StackName}:PrivateSubnet1Id 

  PrivateSubnet2Id:
    Description: Subnet ID of private subnet in AZ2
    Value: !Ref PrivateSubnet2
    Export: 
      Name: !Sub ${AWS::StackName}:PrivateSubnet2Id   

  RdsSubnetGroupId:
    Description: RDS Subnet group ID
    Value: !Ref RdsSubnetGroup
    Export: 
      Name: !Sub ${AWS::StackName}:RdsSubnetGroupId
